--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,6 +33,15 @@
       <main role="main" class="container">
         <div class="row">
           <div class="col-md-8">
+            {% with msgs = get_flashed_messages(with_categories=true)%}
+              {% if msgs %}
+                {% for category, msg in msgs %}
+                  <div class="alert alert-{{category}}">
+                    <p>{{msg}}</p>
+                  </div>
+                {% endfor %}
+              {% endif %}
+            {% endwith%}
             {% block main_content %}{% endblock %}
           </div>
           <div class="col-md-4">
