--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,53 @@
 {% extends "layout.html" %}
 
 {% block main_content %}
+    <div class="content-section">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Log IN</legend>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label")}}
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid")}}
+                        {% for error in form.email.errors%}
+                            <div class="invalid-feedback">
+                                <p>{{error}}</p>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label")}}
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control form-control-lg is-invalid")}}
+                        {% for error in form.password.errors%}
+                            <div class="invalid-feedback">
+                                <p>{{error}}</p>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+                <div class="form-check mt-2">
+                    {{ form.remember(class="form-check-input")}}
+                    {{ form.remember.label(class="form-check-input-label")}}
+                </div>
+            </fieldset>
+            <div class="form-group mt-2">
+                {{ form.submit(class="btn btn-outline-info")}}
+            </div>
+            <small class="text-muted ml-2">
+                <a href="#">Forgot Password</a>
+            </small>
+        </form>
+    </div>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Do you have an account? <a href="{{url_for('register')}}" class="ml-2"> Login in</a>
+        </small>
+    </div>
 {% endblock main_content%}
